chore: use dub for the build system instead

--- a/README
+++ b/README
@@ -2,3 +2,8 @@ blackjack
 =========
 
 Fair blackjack game implementation / server.
+
+Build & Run
+-----------
+    
+    dub build -b=release && ./blackjack
